--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -1,5 +1,3 @@
-# docker build -t words-of-wisdom-client -f Dockerfile.client . 
-# docker run -it --rm --net=host --name w-o-w-c words-of-wisdom-client
 FROM golang:alpine3.20 AS builder
 RUN mkdir /app
 WORKDIR /app
@@ -11,5 +9,7 @@ RUN GOOS=linux GOARCH=amd64 go build -o ./word-of-wisdom-client
 FROM alpine:3.20.0
 WORKDIR /
 COPY --from=builder /app/word-of-wisdom-client .
+
+ENV POW_CLIENT_URL="http://localhost:12000/words"
 
 CMD ["/word-of-wisdom-client", "client", "--endless"]
